게시글 클릭하면 넘어가게

--- a/views/match.html
+++ b/views/match.html
@@ -15,6 +15,7 @@
           .catch(error => console.error('Error:', error));
     </script>
   </head>
+
   <body>
     <!-- 네비게이션바 -->
     <div id='content'></div>
@@ -24,12 +25,10 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-12">
-           
             <i class="bi bi-house-fill"> / 매치 / 전체 매치</i>
           </div> 
         </div>
       </div>
-    
     </main>
 
     <!--사이드바 -->
@@ -46,42 +45,38 @@
       </div>
       <hr class="my-4" style="height: 3px; background-color: #006f3e;">
 
-
-
     <!--게시글 리스트-->
-    
       <div class="container-fluid  p-5">
-        <h2 class="text-center mt-5 fw-bold ">매치글</h1>
+        <h2 class="text-center mt-5 fw-bold ">매치글</h2>
         <div class="mt-5 pt-5">
-        <div class="container-fluid p-5 me-5 mr-5list-container">
-        <div class="card mb-1 p-3">
-          <div class="card-header">
-            <a class="btn btn-primary float-end" href="/match/write" style="background-color: #006f3e; color: white;"> 
-              <i class="fas fa-edit"></i> 글 작성
-            </a>
-          </div>
-          <div class="card-body">
-            <table class="table table-hover table-striped">
-              <thead>
-                <tr>
-                  <th>번호</th>
-                  <th>모집 상태</th>
-                  <th>운동종목</th>
-                  <th>제목</th>
-                  <th>작성자</th>
-                  <th>작성일</th>
-                </tr>
-              </thead>
-              <tbody id="matchTableBody">
-                
-               
-              </tbody>
-            </table>
+          <div class="container-fluid p-5 me-5 mr-5list-container">
+            <div class="card mb-1 p-3">
+              <div class="card-header">
+                <a class="btn btn-primary float-end" href="/match/write" style="background-color: #006f3e; color: white;"> 
+                  <i class="fas fa-edit"></i> 글 작성
+                </a>
+              </div>
+              <div class="card-body">
+                <table class="table table-hover table-striped">
+                  <thead>
+                    <tr>
+                      <th>번호</th>
+                      <th>모집 상태</th>
+                      <th>운동종목</th>
+                      <th>제목</th>
+                      <th>작성자</th>
+                      <th>작성일</th>
+                    </tr>
+                  </thead>
+                  <tbody id="matchTableBody">
+                  <!-- 여기에 게시글 목록이 추가됨 -->
+                  </tbody>
+                </table>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-      </div>
-    </div>
   
     <!-- 페이지네이션 -->
     <div class="pagination justify-content-center mt-4" id="pagination">
@@ -91,14 +86,13 @@
     <br/>
     <br/>
     
-    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-    <script>// HTML 템플릿에 데이터 추가
-    const tbody = document.querySelector('tbody');
-    const paginationDiv = document.getElementById('pagination');
+    <script>
+      const tbody = document.querySelector('tbody');
+      const paginationDiv = document.getElementById('pagination');
 
-    //매치 리스트 가져오기
-    fetch('/match/list')
+      //매치 리스트 가져오기
+      fetch('/match/list')
         .then(response => response.json())
         .then(data => {
           const tbody = document.getElementById('matchTableBody');
@@ -119,79 +113,84 @@
         .catch(error => console.error('Error:', error));
 
 
-    //페이지네이션
-    const ITEMS_PER_PAGE = 10;
+      //페이지네이션
+      const ITEMS_PER_PAGE = 10;
 
-    function createPaginationButtons(totalPages, currentPage) {
-  paginationDiv.innerHTML = ''; // 이전 버튼 초기화
+      function createPaginationButtons(totalPages, currentPage) {
+        paginationDiv.innerHTML = ''; // 이전 버튼 초기화
 
-  const prevButton = document.createElement('button');
-  prevButton.innerHTML = `
-    <span aria-hidden="true">&laquo;</span>
-    <span class="visually-hidden">Previous</span>
-  `;
-  prevButton.classList.add('btn', 'btn-outline-secondary', 'me-2');
-  prevButton.addEventListener('click', () => {
-    if (currentPage > 1) {
-      fetchData(currentPage - 1);
-    }
-  });
-  paginationDiv.appendChild(prevButton);
-
-  for (let i = 1; i <= totalPages; i++) {
-    const pageButton = document.createElement('button');
-    pageButton.innerText = i;
-    pageButton.classList.add('btn', 'btn-outline-secondary', 'me-2');
-    if (i === currentPage) {
-      pageButton.classList.add('btn-custom');
-    }
-    pageButton.addEventListener('click', () => {
-      fetchData(i);
-    });
-    paginationDiv.appendChild(pageButton);
-  }
-
-  const nextButton = document.createElement('button');
-  nextButton.innerHTML = `
-    <span aria-hidden="true">&raquo;</span>
-    <span class="visually-hidden">Next</span>
-  `;
-  nextButton.classList.add('btn', 'btn-outline-secondary');
-  nextButton.addEventListener('click', () => {
-    if (currentPage < totalPages) {
-      fetchData(currentPage + 1);
-    }
-  });
-  paginationDiv.appendChild(nextButton);
-}
-
-function fetchData(page) {
-  fetch(`/match/list?page=${page}`)
-    .then(response => response.json())
-    .then(data => {
-      tbody.innerHTML = ''; // 테이블 초기화
-
-      data.boards.forEach((matches, index) => {
-        const row = document.createElement('tr');
-        const formattedDate = new Date(matches.createdAt).toLocaleDateString();
-        row.innerHTML = `
-          <td>${index + 1}</td>
-          <td>${matches.state}</td>
-          <td>${matches.sport}</td>
-          <td>${matches.title}</td>
-          <td>${matches.writer}</td>
-          <td>${formattedDate}</td>
+        const prevButton = document.createElement('button');
+        prevButton.innerHTML = `
+          <span aria-hidden="true">&laquo;</span>
+          <span class="visually-hidden">Previous</span>
         `;
-        tbody.appendChild(row);
-      });
+        prevButton.classList.add('btn', 'btn-outline-secondary', 'me-2');
+        prevButton.addEventListener('click', () => {
+          if (currentPage > 1) {
+            fetchData(currentPage - 1);
+          }
+        });
+        paginationDiv.appendChild(prevButton);
 
-      createPaginationButtons(data.totalPages, data.currentPage);
-    })
-    .catch(error => console.error('Error:', error));
-}
+        for (let i = 1; i <= totalPages; i++) {
+          const pageButton = document.createElement('button');
+          pageButton.innerText = i;
+          pageButton.classList.add('btn', 'btn-outline-secondary', 'me-2');
+          if (i === currentPage) {
+            pageButton.classList.add('btn-custom');
+          }
+          pageButton.addEventListener('click', () => {
+            fetchData(i);
+          });
+          paginationDiv.appendChild(pageButton);
+        }
+
+        const nextButton = document.createElement('button');
+        nextButton.innerHTML = `
+          <span aria-hidden="true">&raquo;</span>
+          <span class="visually-hidden">Next</span>
+        `;
+        nextButton.classList.add('btn', 'btn-outline-secondary');
+        nextButton.addEventListener('click', () => {
+          if (currentPage < totalPages) {
+            fetchData(currentPage + 1);
+          }
+        });
+        paginationDiv.appendChild(nextButton);
+      }
+
+      function fetchData(page) {
+        fetch(`/match/list?page=${page}`)
+          .then(response => response.json())
+          .then(data => {
+            tbody.innerHTML = ''; // 테이블 초기화
+
+            data.boards.forEach((matches, index) => {
+              const row = document.createElement('tr');
+              const formattedDate = new Date(matches.createdAt).toLocaleDateString();
+              row.innerHTML = `
+                <td>${index + 1}</td>
+                <td>${matches.state}</td>
+                <td>${matches.sport}</td>
+                <td>${matches.title}</td>
+                <td>${matches.writer}</td>
+                <td>${formattedDate}</td>
+              `;
+              row.addEventListener('click', () => {
+                // 글 상세 페이지로 이동
+                window.location.href = `/match/read/${matches._id}`;
+              });
+              tbody.appendChild(row);
+            });
+
+            createPaginationButtons(data.totalPages, data.currentPage);
+          })
+          .catch(error => console.error('Error:', error));
+      }
 
 // 초기 데이터 로딩
 fetchData(1);
+
   </script>
   </body>
 </html>
