--- a/views/read_match.html
+++ b/views/read_match.html
@@ -1,5 +1,3 @@
-<!-- 복붙한거임 -->
-
 <!DOCTYPE html>
 <html lang="ko">
   <head>
@@ -17,6 +15,7 @@
           .catch(error => console.error('Error:', error));
     </script>
   </head>
+
   <body>
     <!-- 네비게이션바 -->
     <div id='content'></div>
@@ -26,12 +25,10 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-12">
-           
             <i class="bi bi-house-fill"> / 매치 / 전체 매치</i>
           </div> 
         </div>
       </div>
-    
     </main>
 
     <!--사이드바 -->
@@ -48,88 +45,78 @@
       </div>
       <hr class="my-4" style="height: 3px; background-color: #006f3e;">
       
-      <!--매치글 조회-->
-      <div class="container">
-        <hr/>
-        <div class="row">
-            <div class="col-md-10">
-              <div id=comments>
-          
-              </div>
-          
-                
-                <table class="table table-condensed">
-                    <thead>
-                        <tr>
-                            <td>
-                                <span style='float:right'>
-                                    <a href="/match" class="btn btn-success">목록</a>
-                                    <a href="/match/edit" class="btn btn-success">수정</a>
-                                    <a href="" class="btn btn-success">삭제</a>
-                                    <a href="/match/write" class="btn btn-success">글쓰기</a>
-                                </span>
-                            </td>
-                        </tr>
-                    </thead>
-                </table>
-            </div>
+    <!--매치글 조회-->
+    <div class="container">
+      <hr/>
+      <div class="row">
+        <div class="col-md-10">
+          <div id=comments></div>
+            <table class="table table-condensed">
+              <thead>
+                <tr>
+                  <td>
+                    <span style='float:right'>
+                        <a href="/match" class="btn btn-success">목록</a>
+                        <a href="/match/edit" class="btn btn-success">수정</a>
+                        <a href="" class="btn btn-success">삭제</a>
+                        <a href="/match/write" class="btn btn-success">글쓰기</a>
+                    </span>
+                  </td>
+                </tr>
+              </thead>
+            </table>
         </div>
-                <table class="table table-condensed">
-                    <thead>
-                        <tr>
-                          <th>제목</th>
-                          <td>{{match.title}}</td>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                          <th>작성자</th>
-                          <td>{{match.writer}}</td>
-                        </tr>
-                        <tr>
-                          <th>작성일</th>
-                          <td>{{match.createdAt}}</td>
-                        </tr>
-                        <tr>
-                          <th>종목</th>
-                          <td>{{match.sport}}</td>
-                        </tr>
-                        <tr>
-                          <th>장소</th>
-                          <td>{{match.location}}</td>
-                        </tr>
-                        <tr>
-                          <th>모집인원</th>
-                          <td>{{match.people}}</td>
-                        </tr>
-                        <tr>
-                          <th>참가비</th>
-                          <td>{{match.price}}</td>
-                        </tr>
-                        <tr>
-                          <th>성별</th>
-                          <td>{{match.gender}}</td>
-                        </tr>
-                        <tr>
-                          <th>내용</th>
-                          <td>{{match.content}}</td>
-                        </tr>
-                    </tbody>
-                </table>
-                <div id="form-commentInfo">
-                  <div id="comment-count">댓글 <span id="count">0</span></div>
-                  <input id="comment-input" placeholder="댓글을 입력해 주세요.">
-                  <button id="submit" class="btn btn-success">등록</button>
-              </div>
-              
-        <hr/>
+      </div>
+        <table class="table table-condensed">
+          <thead>
+            <tr>
+              <th>제목</th>
+              <td>{{match.title}}</td>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th>작성자</th>
+              <td>{{match.writer}}</td>
+            </tr>
+            <tr>
+              <th>작성일</th>
+              <td>{{match.createdAt}}</td>
+            </tr>
+            <tr>
+              <th>종목</th>
+              <td>{{match.sport}}</td>
+            </tr>
+            <tr>
+              <th>장소</th>
+              <td>{{match.location}}</td>
+            </tr>
+            <tr>
+              <th>모집인원</th>
+              <td>{{match.people}}</td>
+            </tr>
+            <tr>
+              <th>참가비</th>
+              <td>{{match.price}}</td>
+            </tr>
+            <tr>
+              <th>성별</th>
+              <td>{{match.gender}}</td>
+            </tr>
+            <tr>
+              <th>내용</th>
+              <td>{{match.content}}</td>
+            </tr>
+          </tbody>
+        </table>
+        <div id="form-commentInfo">
+          <div id="comment-count">댓글 <span id="count">0</span></div>
+          <input id="comment-input" placeholder="댓글을 입력해 주세요.">
+          <button id="submit" class="btn btn-success">등록</button>
+        </div>
+      <hr/>
     </div>    
 
-    
-  
-    
-    
-    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </body>
 </html>
