match.status 추가

--- a/views/read_match.html
+++ b/views/read_match.html
@@ -76,6 +76,11 @@
           </thead>
           <tbody>
             <tr>
+              <th>모집 상태</th>
+              <td>{{match.state}}</td>
+            </tr>
+            <tr>
+            <tr>
               <th>작성자</th>
               <td>{{match.writer}}</td>
             </tr>
