--- a/public/stylesheets/index_style.css
+++ b/public/stylesheets/index_style.css
@@ -276,3 +276,80 @@
 .btn-custom:hover {
   background-color: #00552e; /* 활성화 또는 호버 시 색상 변경 */
 }
+
+
+
+/*게시물 작성 css*/
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  /* display: flex; */
+  justify-content: center;
+  align-items: center;
+  overflow-x: hidden;
+}
+
+.header {
+  padding: 30px;
+  text-align: center;
+}
+
+h2 {
+  color: #333;
+  text-align: center;
+}
+
+.warning {
+    margin: 2em auto;
+    padding:2em;
+    border-radius: 30px 60px/60px 30px;
+    border: solid 8px #006f3e;
+}
+
+.checkbox-wrapper input {
+    display: inline-block;
+    /* margin-right: 5px; */
+}
+
+.checkbox-wrapper label {
+    display: inline-block;
+}
+
+label {
+  display: block;
+  margin: 10px 0;
+  text-align: left;
+}
+
+.write input, textarea {
+  width: 100%;
+  padding: 10px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.write textarea {
+  resize: vertical;
+  height: 200px;
+}
+
+button {
+  background-color: #006f3e;
+  color: white;
+  padding: 10px 15px;
+  margin-top: 10px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #006f3e;
+}
+
+/* .checkbox-wrapper input {
+    display: inline-block;
+    align-items: center;
+    vertical-align: middle; } */
