--- a/views/match.html
+++ b/views/match.html
@@ -62,9 +62,9 @@
                     <tr>
                       <th>번호</th>
                       <th>모집 상태</th>
+                      <th>매치일</th>
                       <th>운동종목</th>
                       <th>제목</th>
-                      <th>작성자</th>
                       <th>작성일</th>
                     </tr>
                   </thead>
@@ -98,14 +98,16 @@
           const tbody = document.getElementById('matchTableBody');
           data.boards.forEach((matches, index) => {
             const row = document.createElement('tr');
-            const formattedDate = new Date(matches.createdAt).toLocaleDateString();
+            const matchDate = new Date(matches.matchDate).toLocaleDateString();
+            const createDate = new Date(matches.createdAt).toLocaleDateString();
             row.innerHTML = `
               <td>${index + 1}</td>
               <td>${matches.state}</td>
+              <td>${matchDate}</td>
               <td>${matches.sport}</td>
               <td>${matches.title}</td>
-              <td>${matches.writer}</td>
-              <td>${formattedDate}</td>
+              <td>${createDate}</td>
+              
             `;
             tbody.appendChild(row);
           });
@@ -167,14 +169,15 @@
 
             data.boards.forEach((matches, index) => {
               const row = document.createElement('tr');
-              const formattedDate = new Date(matches.createdAt).toLocaleDateString();
+              const matchDate = new Date(matches.matchDate).toLocaleDateString();
+              const createDate = new Date(matches.createdAt).toLocaleDateString();
               row.innerHTML = `
                 <td>${index + 1}</td>
                 <td>${matches.state}</td>
+                <td>${matchDate}</td>
                 <td>${matches.sport}</td>
                 <td>${matches.title}</td>
-                <td>${matches.writer}</td>
-                <td>${formattedDate}</td>
+                <td>${createDate}</td>
               `;
               row.addEventListener('click', () => {
                 // 글 상세 페이지로 이동
