--- a/views/read_match.html
+++ b/views/read_match.html
@@ -14,6 +14,20 @@
           .then(data => {document.getElementById("content").innerHTML = data;})
           .catch(error => console.error('Error:', error));
     </script>
+    <style>
+      /* 셀에 선을 추가하고 간격을 조정합니다. */
+      td {
+        padding: 8px; /* 내용과의 간격을 조정합니다 */
+        padding-left: 20px; 
+      }
+    
+      /* 제목 셀의 스타일 */
+      th {
+        
+        font-weight: bold; /* 텍스트를 굵게 설정 */
+        text-align: center; /* 텍스트 가운데 정렬 */
+      }
+    </style>
   </head>
 
   <body>
@@ -25,7 +39,7 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-12">
-            <i class="bi bi-house-fill"> / 매치 / 전체 매치</i>
+            <i class="bi bi-house-fill"> / 매치 </i>
           </div> 
         </div>
       </div>
@@ -43,31 +57,26 @@
           <li><a href="/info/stadium">경기장 정보</a></li>
         </ul>
       </div>
-      <hr class="my-4" style="height: 3px; background-color: #006f3e;">
+      <hr class="my-4" style="height: 3px; background-color: #006f3e; ">
       
     <!--매치글 조회-->
-    <div class="container">
-      <hr/>
+    <div class="container" style="margin: 0 auto; width: 65%;">
+      
       <div class="row">
-        <div class="col-md-10">
-          <div id=comments></div>
+        <div class="col">
             <table class="table table-condensed">
-              <thead>
-                <tr>
-                  <td>
+              
                     <span style='float:right'>
                         <a href="/match" class="btn btn-success">목록</a>
                         <a href="/match/edit" class="btn btn-success">수정</a>
                         <a href="" class="btn btn-success">삭제</a>
                         <a href="/match/write" class="btn btn-success">글쓰기</a>
                     </span>
-                  </td>
-                </tr>
-              </thead>
             </table>
+            <hr style="border: solid #006f3e;"/>
         </div>
       </div>
-        <table class="table table-condensed">
+      <table class="table table-condensed" >
           <thead>
             <tr>
               <th>제목</th>
@@ -75,22 +84,18 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
-              <th>모집 상태</th>
-              <td>{{match.state}}</td>
-            </tr>
-            <tr>
+            
             <tr>
               <th>작성자</th>
               <td>{{match.writer}}</td>
             </tr>
             <tr>
-              <th>작성일</th>
-              <td>{{match.createdAt}}</td>
-            </tr>
-            <tr>
               <th>종목</th>
               <td>{{match.sport}}</td>
+            </tr>
+            <tr>
+              <th>매치날짜</th>
+              <td>{{match.matchDate}}</td>
             </tr>
             <tr>
               <th>장소</th>
@@ -106,22 +111,36 @@
             </tr>
             <tr>
               <th>성별</th>
-              <td>{{match.gender}}</td>
+              <td >{{match.gender}}</td>
             </tr>
             <tr>
               <th>내용</th>
               <td>{{match.content}}</td>
             </tr>
+            <tr>
+              <th>작성일</th>
+              <td>{{match.createdAt}}</td>
+            </tr>
+            
           </tbody>
         </table>
-        <div id="form-commentInfo">
-          <div id="comment-count">댓글 <span id="count"></span></div>
+        <hr style="border: solid #006f3e;"/>
+        <br/>
+        
+        <div id="form-commentInfo" style="text-align: center;">
           <input id="comment-input" placeholder="댓글을 입력해 주세요.">
           <button id="commentSubmit" class="btn btn-success">등록</button>
+          <br/>
         </div>
-        <hr/>
-        <table class="table">
+        <br/>
+        <br/>
+        <br/>
+        <div id="comment-count" style="width:100%">댓글 <span id="count"></span></div>
+        
+        
+        <table class="table" style="text-align: center;">
           <thead>
+            <hr>
             <tr>
               <th scope="col">댓글 내용</th>
               <th scope="col">작성자</th>
@@ -130,7 +149,12 @@
           <tbody id="showcomment"></tbody>
         </table>
         <hr/>
-    </div>    
+    </div> 
+    <br/>  
+    <br/> 
+    <br/> 
+    <br/> 
+    <br/>  
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <script>
