--- a/views/match.html
+++ b/views/match.html
@@ -46,11 +46,12 @@
       <hr class="my-4" style="height: 3px; background-color: #006f3e;">
 
     <!--게시글 리스트-->
-      <div class="container-fluid  p-5">
+    <div style="margin: 0 auto; width: 90%;">
+      <div class="container-fluid  p-5"  >
         <h2 class="text-center mt-5 fw-bold ">매치글</h2>
-        <div class="mt-5 pt-5">
-          <div class="container-fluid p-5 me-5 mr-5list-container">
-            <div class="card mb-1 p-3">
+       
+          <div class="container-fluid p-5 me-5 mr-5list-container ">
+            <div class="card mb-1 p-3"  style="border: 3px solid #006f3e;">
               <div class="card-header">
                 <a class="btn btn-primary float-end" href="/match/write" style="background-color: #006f3e; color: white;"> 
                   <i class="fas fa-edit"></i> 글 작성
@@ -79,9 +80,10 @@
       </div>
   
     <!-- 페이지네이션 -->
-    <div class="pagination justify-content-center mt-4" id="pagination">
+    <div class="pagination justify-content-center" id="pagination" >
       <!-- 여기에 페이지 버튼들이 추가  -->
     </div>
+  </div>
     <br/>
     <br/>
     <br/>
