--- a/views/match.html
+++ b/views/match.html
@@ -25,7 +25,7 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-12">
-            <i class="bi bi-house-fill"> / 매치 / 전체 매치</i>
+            <i class="bi bi-house-fill"> > 매치 > 전체 매치</i>
           </div> 
         </div>
       </div>
