--- a/views/read_match.html
+++ b/views/read_match.html
@@ -39,7 +39,7 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-12">
-            <i class="bi bi-house-fill"> / 매치 </i>
+            <i class="bi bi-house-fill"> > 매치 > 전체 매치</i>
           </div> 
         </div>
       </div>
@@ -50,7 +50,7 @@
       <div id="sidebar-wrapper">
         <ul class="sidebar-nav">
           <li class="sidebar-brand">
-            <a href="/match" style="font-size: 1.5em;">매치</a>
+            <a href="/match" style="font-size: 1.5em;">매치 </a>
           </li>
           <li><a href="/match" class="underline-on">전체 매치</a></li>
           <li><a href="/match/write">매치 게시물 작성</a></li>
@@ -115,7 +115,7 @@
             </tr>
             <tr>
               <th>내용</th>
-              <td>{{match.content}}</td>
+              <td style="height: 200px; overflow: auto;">{{match.content}}</td>
             </tr>
             <tr>
               <th>작성일</th>
