--- a/views/stadium.html
+++ b/views/stadium.html
@@ -27,7 +27,7 @@
         <div class="row">
           <div class="col-md-12">
            
-            <i class="bi bi-house-fill"> / 매치 / 경기장 정보</i>
+            <i class="bi bi-house-fill"> > 매치 > 경기장 정보</i>
           </div> 
         </div>
       </div>
