--- a/views/write_board.html
+++ b/views/write_board.html
@@ -53,7 +53,7 @@
 
       <div class="container">
         <div class="header">
-          <h2 class="text-center mt-5 fw-bold ">매치글 작성</h2>
+          <h2 class="text-center mt-5 fw-bold ">커뮤니티 글 작성</h2>
         </div>
         <div class="warning " style="margin: 0 250px;">
             <h3 class="mt-5 fw-bold ">주의 사항</h3>
@@ -80,14 +80,14 @@
             <input type="text" id="title" name="title" placeholder="제목" required>
             <select id="category" id = "category" name="category" required style="height: 40px;">
               <option value="" disabled selected>카테고리 선택</option>
-              <option id = "popular" value="popular">인기</option>
-              <option id = "daily" value="daily">일일</option>
-              <option id = "equipment" value="equipment">장비</option>
-              <option id = "tip" value="tip">꿀팁</option>
-              <option id = "market" value="market">장터</option>
-              <option id = "promotion" value="promotion">홍보</option>
+              <option id = "popular" value="popular">인기게시판</option>
+              <option id = "daily" value="daily">일일게시판</option>
+              <option id = "equipment" value="equipment">장비게시판</option>
+              <option id = "tip" value="tip">꿀팁게시판</option>
+              <option id = "market" value="market">장터게시판</option>
+              <option id = "promotion" value="promotion">홍보게시판</option>
             </select>
-            <textarea id="content" name="content" rows="4" placeholder="내용" required></textarea>
+            <textarea id="description" name="description" rows="4" placeholder="내용" required></textarea>
           
             <div class="d-grid gap-2 d-md-flex justify-content-md-end">
               <button value='findsportmate' type="submit">글 작성</button>
@@ -128,7 +128,7 @@
         } else {
           const title = document.getElementById('title').value;
           const category = document.getElementById('category').value;
-          const content = document.getElementById('content').value;
+          const description = document.getElementById('description').value;
   
           const token = sessionStorage.getItem('토큰'); 
   
@@ -138,7 +138,7 @@
               'authorization': `${token}`,
               'Content-Type': 'application/json',
             },
-            body: JSON.stringify({ title, category, content })
+            body: JSON.stringify({ title, category, description })
           })
           .then(response => { 
             console.log('서버 응답:', response);
