--- a/views/write_match.html
+++ b/views/write_match.html
@@ -6,7 +6,21 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="/stylesheets/index_style.css"/>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"/>
+  <style>
+    /* 기본 글자 색상 */
+    .btn-outline-success {
+      color: #006f3e;
+      border-color: #006f3e;
+    }
   
+    /* 클릭 시 글자 색상 */
+    .btn-check:checked + .btn-outline-success, 
+    .btn-outline-success.active {
+      color: #ffffff; /* 변경할 색상 */
+      background-color: #006f3e; /* 변경할 배경 색상 */
+      border-color: #006f3e; /* 변경할 테두리 색상 */
+    }
+  </style>
   <script>      
     fetch('/navbar')
       .then(response => {return response.text()})
@@ -25,7 +39,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-12">         
-          <i class="bi bi-house-fill"> / 매치 / 매치 게시물 작성</i>
+          <i class="bi bi-house-fill"> > 매치 > 매치 게시물 작성</i>
         </div> 
       </div>
     </div>
