--- a/views/mypage.html
+++ b/views/mypage.html
@@ -34,8 +34,7 @@
     <main class="mt-3 pt-1">
       <div class="container-fluid">
         <div class="row">
-          <div class="col-md-12">
-           
+          <div class="col-md-12">           
             <i class="bi bi-house-fill"> > 마이페이지</i>
           </div> 
         </div>
@@ -48,6 +47,8 @@
         <ul class="sidebar-nav">
           <li class="sidebar-brand">
             <a href="/users" style="font-size: 1.5em;">마이페이지</a>
+            <a href="/users/match/${id}" style="font-size: 1.5em;">내 매치글 보기</a>
+            <a href="/users/community/${id}" style="font-size: 1.5em;">내 커뮤니티글 보기</a>
             <br>
             <br>
             <br>
@@ -77,10 +78,8 @@
           </div>
           <div id="check"></div>
         </form>
-        
         <button type="button" id="changebutton" onclick="updatePassword()" class="btn btn-success" disabled>비밀번호 수정</button>
-
-      </main>      
+      </main>        
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   
@@ -89,6 +88,7 @@
         checkAuthentication(); // 페이지 로드 시 토큰 확인
         getUserId(); // 페이지 로드 시 아이디 확인
         getUserEmail(); // 페이지 로드 시 이메일 확인
+        // getMatchList(); // 페이지 로드 시 매치 리스트 가져오기
       });
 
       // 사용자의 인증 여부를 확인하는 함수
@@ -138,20 +138,20 @@
 
       // 새로운 비밀번호 유효성 검사
       function checkNewPw() {
-          const password = document.getElementById('new-password').value;
-          const check = document.getElementById('check');
+        const password = document.getElementById('new-password').value;
+        const check = document.getElementById('check');
 
-          const regex = /^(?=.*[A-Za-z])(?=.*?[0-9])(?=.*?[#?!@$%^&*-])(?=.*\d).{8,16}$/;
-          if (!regex.test(password)) {
-              document.getElementById('new-password').value = ''; // 유효성 검사 통과 못하면 입력한 값 지움
-              document.getElementById('new-password').focus();
-              check.innerHTML = '비밀번호는 영어, 숫자, 특수문자의 조합이며 8글자~ 16글자이어야 합니다.';
-              check.style.color = 'red';
-              document.getElementById('changebutton').disabled = true;
-          } else {
-            check.innerHTML = ''; // 유효성 검사 통과 시 에러 메시지를 지움
-            document.getElementById('changebutton').disabled = false;
-          }
+        const regex = /^(?=.*[A-Za-z])(?=.*?[0-9])(?=.*?[#?!@$%^&*-])(?=.*\d).{8,16}$/;
+        if (!regex.test(password)) {
+          document.getElementById('new-password').value = ''; // 유효성 검사 통과 못하면 입력한 값 지움
+          document.getElementById('new-password').focus();
+          check.innerHTML = '비밀번호는 영어, 숫자, 특수문자의 조합이며 8글자~ 16글자이어야 합니다.';
+          check.style.color = 'red';
+          document.getElementById('changebutton').disabled = true;
+        } else {
+          check.innerHTML = ''; // 유효성 검사 통과 시 에러 메시지를 지움
+          document.getElementById('changebutton').disabled = false;
+        }
       }
 
       // 비밀번호 변경
@@ -162,15 +162,15 @@
         console.log(currentPassword, newPassword)
 
         fetch("/users/changepassword", {
-            method: 'PUT',
-            headers: { 
-              'authorization': `${token}`,
-              'Content-Type': 'application/json', 
-            },
-            body: JSON.stringify({
-              currentPassword: currentPassword,
-              newPassword: newPassword
-            })
+          method: 'PUT',
+          headers: { 
+            'authorization': `${token}`,
+            'Content-Type': 'application/json', 
+          },
+          body: JSON.stringify({
+            currentPassword: currentPassword,
+            newPassword: newPassword
+          })
         })
         .then(response => { return response.json(); })
         .then(data => {
@@ -182,34 +182,35 @@
         .catch(error => console.error('Error:', error));
       }
 
-        function deleteAccount() {
-          const token = sessionStorage.getItem('토큰'); 
+      // 회원 탈퇴
+      function deleteAccount() {
+        const token = sessionStorage.getItem('토큰'); 
 
-          if (confirm("정말로 탈퇴하시겠습니까?")) {
-            const confirmPassword = prompt('비밀번호를 입력하세요');
+        if (confirm("정말로 탈퇴하시겠습니까?")) {
+          const confirmPassword = prompt('비밀번호를 입력하세요');
 
-            fetch("/users/delete", {
-                method: 'DELETE',
-                headers: { 
-                  'authorization': `${token}`,
-                  'Content-Type': 'application/json', 
-                },
-                body: JSON.stringify({
-                  password: confirmPassword,
-                }),
-            })
-            .then(response => { return response.json(); })
-            .then(data => { 
-              alert(data.message); 
-              if (data.state) {
-                sessionStorage.removeItem('토큰');
-                location.href = '/';
-              }
-            })
-            .catch(error => console.error('Error:', error));
+          fetch("/users/delete", {
+            method: 'DELETE',
+            headers: { 
+              'authorization': `${token}`,
+              'Content-Type': 'application/json', 
+            },
+            body: JSON.stringify({
+              password: confirmPassword,
+            }),
+          })
+          .then(response => { return response.json(); })
+          .then(data => { 
+            alert(data.message); 
+            if (data.state) {
+              sessionStorage.removeItem('토큰');
+              location.href = '/';
+            }
+          })
+          .catch(error => console.error('Error:', error));
         }
       }
-  </script>
 
+    </script>
   </body>
 </html>
