로그아웃 구현

--- a/views/navbar.html
+++ b/views/navbar.html
@@ -55,5 +55,13 @@
         <ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
             <li><a class="nav-link" href="/users"><i class="bi bi-person-fill"></i></a></li>
         </ul>
+        <ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
+            <li>
+                <button onclick="sessionStorage.removeItem('토큰'); location.href = '/';">
+                    <i class="bi bi-box-arrow-right"></i>
+                    로그아웃
+                </button>
+            </li>
+        </ul>
     </div>
 </nav>
